<resources>
    <string name="app_name">ChiMoy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Wahyu Hidayah</string>
    <string name="nav_header_subtitle">awahyu@wahyutampan.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_kasir">Kasir</string>
    <string name="menu_keranjang">Keranjang</string>
    <string name="menu_riwayat">Riwayat</string>
    <string name="menu_keuangan">Managemen Keuangan</string>
    <string name="menu_topproduk">Top Produk</string>
    <string name="menu_logout">LogOut</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>